@@ -1,5 +1,10 @@
 2005-07-19  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
 
+	* src/telnetcon.cpp:
+	Little bug fix.
+
+2005-07-19  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
+
 	* src/termview.cpp:
 	Add (CTermView::HyperLinkHitTest)
 
